# GPU

./: Dockerfile  Notes.md  README.md  Run-cuda.md  test.dot
CMakeExample/: CMakeLists.txt
Conference/: PassManager.graphml
Examples/: CMakeLists.txt  Driver.cu  MatMul.cu  Parameters.cu
MatMul/: Boot.py  CMakeLists.txt  Graphs.ipynb  Mat-mul-simple.cu  Mat-mul-tiled-int.cu  Mat-mul-tiled-transpose.cu  Mat-mul-tiled.cu  MatMul.cu  Matrix.h  Utils.cpp  Utils.h  guide-with-shared.cu  guide-without-shared.cu  main.cu
MatMul/cuda-guide/: with-shared.cu  without-shared.cu
Normal-matmul/: BFS.cu  CMakeLists.txt  Graph-BFS.py  Graphs.py  I-love-cuda.cu  Kernels.cu.h  Matrix.h  Readme.md  Utils.cpp  Utils.h  main.cu
Normal-matmul/include/: Generator.h  Kernels.cu.h  Matr-utils.h  Matrix.h  Utils.h
PBQP/: CMakeLists.txt  CmakeLists.txt  Full-search-graph.py  Graph-generator.cpp  Graph-printer.cpp  Perf-measurements.cpp  Plan.md  Readme.md  main.cpp  solution.dot-CPU.dot  solution.dot-GPU.dot  solver-api.cpp
PBQP/docs/: Doxygen.conf
PBQP/include/: CPU-solver.h  Entities.h  GPU-graph.h  GPU-solver.cu.h  Graph-gen.h  Matrix.h  PBQP.h  Translator.h  Utils.h
PBQP/lib/: CMakeLists.txt  CPU-solver.cpp  GPU-Graph.cu  GPU-graph.cu  GPU-solver.cu  Graph-gen.cpp  PBQP.cpp  Utils.cpp
PBQP/tests/: R0-R1-performance.out  Tests-description.md  big-test.dot  big-test.out  from-paper-bigger-1792.out  from-paper-bigger-760.out  from-paper-bigger-with-loops.dot  from-paper-bigger-with-loops.out  from-paper-bigger.out  from-paper.out  small-test.dot  small-test.out
PBQP/tests/llvm/: Notes.md  example.c  example.ll  example.ll.high_register_pressure.0.pbqpgraph  example.ll.high_register_pressure.0.pbqpgraph-without-inf  example.ll.high_register_pressure.1.pbqpgraph  example.ll.high_register_pressure.1.solution  example.ll.high_register_pressure.2.solution  example.ll.main.0.pbqpgraph  example.ll.main.1.solution  example.s  generate.sh  hello.ll.main.0.pbqpgraph  run-llc.sh  solvers-comparator.py
PBQP/tests/results/: big-test-reductions.dot  small-test-CPU.dot  small-test-GPU.dot  small-test-reductions.dot
Task/: CMakeLists.txt  Matrix.h  Utils.h  VecAdd.cu
